Project title text overflow bug fixed

--- a/src/css/members.css
+++ b/src/css/members.css
@@ -28,6 +28,7 @@
 .memberSec .prjWrapper{
     padding-bottom: 0px;
     text-decoration: none !important;
+    display: block;
 }
 .memberSec a{
     text-decoration: none !important;
