--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -30,19 +30,17 @@
     border-radius: 7px;
     padding:5px;
     min-height:100%;
-    position: relative;
-    padding-bottom: 40px;
+    padding-bottom: 52px;
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.4);
     transition:all 0.5s;
     position: relative;
-}
-.prjWrapper:hover{
-    box-shadow: 0px 2px 10px 0px rgba(0,0,0,0.4);
+    display: flex;
 }
 .projTitle{
     font-family: 'PopM';
     font-weight:500;
     text-align: center;
+    word-break: break-word;
 }
 .projDesc{
     font-size: 15px;
@@ -118,7 +116,7 @@
     position: relative;
     width: 100%;
     min-height: 225px;
-    max-height: 100%;
+    height: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     text-align: center;
@@ -128,7 +126,7 @@
 
 .flip-card-back .projDesc{
     margin:10px;
-    max-height:156px;
+    max-height:224px;
     overflow: auto;
 }
 .flip-card-back .projDesc::-webkit-scrollbar{
